--- a/package.json
+++ b/package.json
@@ -5,9 +5,12 @@
   "scripts": {
     "dev": "next dev",
     "build": "next build",
-    "start": "next start"
+    "start": "next start",
+    "e2e": "cypress open",
+    "test": "jest"
   },
   "dependencies": {
+    "cypress": "^4.8.0",
     "dotenv": "^8.2.0",
     "js-cookie": "^2.2.1",
     "next": "9.4.2",
@@ -15,5 +18,8 @@
     "postgres": "^1.0.2",
     "react": "16.13.1",
     "react-dom": "16.13.1"
+  },
+  "devDependencies": {
+    "jest": "^26.0.1"
   }
 }
