--- a/package.json
+++ b/package.json
@@ -7,12 +7,15 @@
     "build": "next build",
     "start": "next start",
     "e2e": "cypress open",
-    "test": "jest"
+    "test": "jest",
+    "migrate": "dotenv ley"
   },
   "dependencies": {
     "cypress": "^4.8.0",
     "dotenv": "^8.2.0",
+    "dotenv-cli": "^3.1.0",
     "js-cookie": "^2.2.1",
+    "ley": "^0.5.0",
     "next": "9.4.2",
     "next-cookies": "^2.0.3",
     "postgres": "^1.0.2",
