--- a/package.json
+++ b/package.json
@@ -26,8 +26,14 @@
   },
   "devDependencies": {
     "@types/react": "^16.9.36",
+    "babel-jest": "^26.0.1",
     "cypress": "^4.8.0",
     "jest": "^26.0.1",
     "typescript": "^3.9.5"
+  },
+  "jest": {
+    "testPathIgnorePatterns": [
+      "<rootDir>/cypress"
+    ]
   }
 }
