--- a/package.json
+++ b/package.json
@@ -20,9 +20,7 @@
     "next-cookies": "^2.0.3",
     "postgres": "^1.0.2",
     "react": "16.13.1",
-    "react-dom": "16.13.1",
-    "react-payment-inputs": "^1.1.6",
-    "styled-components": "^5.1.1"
+    "react-dom": "16.13.1"
   },
   "devDependencies": {
     "@types/react": "^16.9.36",
