Edit dotenv example

--- a/.env.example
+++ b/.env.example
@@ -1,4 +1,4 @@
 PGHOST=localhost
-PGDATABASE=nextjs_ecommerce_store
-PGUSERNAME=nextjs_ecommerce_score
-PGPASSWORD=nextjs_ecommerce_store
+PGDATABASE=XXXXXXXXX
+PGUSERNAME=XXXXXXXXX
+PGPASSWORD=XXXXXXXXX
