--- a/package.json
+++ b/package.json
@@ -3,9 +3,9 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "next dev",
-    "heroku-postbuild": "npm migrate up && next build",
-    "build": "next build",
+    "dev": "NODE_OPTIONS=--openssl-legacy-provider next dev",
+    "heroku-postbuild": "npm migrate up && NODE_OPTIONS=--openssl-legacy-provider next build",
+    "build": "NODE_OPTIONS=--openssl-legacy-provider next build",
     "start": "next start -p ${PORT:-\"3000\"}",
     "e2e": "cypress open",
     "test": "jest",
@@ -20,7 +20,8 @@
     "next-cookies": "^2.0.3",
     "postgres": "^1.0.2",
     "react": "16.13.1",
-    "react-dom": "16.13.1"
+    "react-dom": "16.13.1",
+    "react-icons": "^5.3.0"
   },
   "devDependencies": {
     "@types/react": "^16.9.36",
