--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "babel-jest": "^26.0.1",
     "cypress": "^4.8.0",
     "jest": "^26.0.1",
+    "prettier-eslint": "^16.3.0",
     "typescript": "^3.9.5"
   },
   "jest": {
