--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "start": "next start -p ${PORT:-\"3000\"}",
     "e2e": "cypress open",
     "test": "jest",
-    "migrate": "dotenv ley up"
+    "migrate": "dotenv ley"
   },
   "dependencies": {
     "dotenv": "^8.2.0",
